# FFTCore

./: CMakeLists.txt  README.md
cpp/include/FFTcore/: dft.hpp  fft.hpp  utils.hpp
cpp/src/: dft.cpp  fft.cpp  utils.cpp
python/: bindings.cpp  plot_fft.py  plot_performance.py
tests/: benchmark.cpp  example_main.cpp
